Fixing rare case of white-space nowrap extending out of flex child

--- a/assets/src/styles/charcoal/admin/objects/_flex.scss
+++ b/assets/src/styles/charcoal/admin/objects/_flex.scss
@@ -12,12 +12,12 @@
     @media (min-width: $from-medium) {
         flex: 0 0 auto;
     }
-
 }
 
 .o-flex_main {
     @media (min-width: $from-medium) {
         min-height: calc(100vh - #{rem($unit)});
         flex: 1;
+        min-width: 0;
     }
 }
